#656 Fix outline for selected filter elements so that cropping doesn't occur in Chrome browser.

--- a/assets/css/sass/_symbols.sass
+++ b/assets/css/sass/_symbols.sass
@@ -180,18 +180,16 @@
   font-weight: bold
   fill: $current-color
   outline: solid 2px $current-frame-color 
-  outline-offset: -2px
+  
 
 .tooltip-zygosity:hover
   outline: solid 2px $current-frame-color 
-  outline-offset: -2px
-
+  
 .impact.current:hover, .vepImpact.current:hover, .highestImpactVep.current:hover,  .effect.current:hover, .vepConsequence.current:hover, .tooltip-zygosity.current:hover, .regulatory.current:hover, .polyphen.current:hover, .sift.current:hover, .type.current:hover, .afexaclevels.current:hover, .af1000glevels.current:hover, .inheritance.current:hover, .clinvar.current:hover, .uasibs.current:hover, .recfilter.current:hover
   font-weight: bold
   cursor: pointer
   outline: solid 2px $current-color 
-  outline-offset: -2px
-
+  
   &.not-equal
     outline: none
 
@@ -201,7 +199,7 @@
 .current
   font-weight: bold
   outline: solid 2px $current-color
-  outline-offset: -2px
+
 
   &.not-equal
     background-image: linear-gradient(transparent 7px,$current-color 7px,$current-color 9px,transparent 9px)
